Fix to flickering when tapping accordion links on iOS Safari

--- a/css/scss/mike/mobile-menu-accordion.scss
+++ b/css/scss/mike/mobile-menu-accordion.scss
@@ -225,6 +225,9 @@ input#m-q {
   -webkit-transform: translate3d(100%, 0, 0);
   -moz-transform: translate3d(100%, 0, 0);
   transform: translate3d(100%, 0, 0);
+
+  /* Prevent flicker when tapped on iOS Safari */
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .m-level {
